@@ -27,6 +27,7 @@ struct S1
     string name;
 };
 
+["cpp:comparable"]
 struct S2
 {
     bool bo;
